--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -3,10 +3,10 @@
 @using CourceProject.Components.Services
 @inject IUserRepository _listUsers
 @inject IAccountRepository _listAccounts
-@*@inject ProtectedSessionStorage localStorage;*@
 @inject Blazored.SessionStorage.ISessionStorageService localStorage;
 @inject NavigationManager navigationManager;
 @inject IEncryptor passwordEncryptor;
+@inject IToastService toastService
 @page "/PasswordManager"
 
 @rendermode InteractiveServer
@@ -23,6 +23,10 @@
         <p>@_pageTitle - "@_nameUser"</p>
         <p>userId - "@_userId" </p>
         <h1>Список аккаунтов</h1>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-2">
+            <button class="btn btn-1" @onclick="(()=>ChangePasswordUser((int)_userId))"> Изменить пароль пользователя </button>
+          
+        </div>
         <br />
         <button class="btn btn-primary" id="exit" @onclick="Exit">Выйти</button>
         <br />
@@ -35,17 +39,25 @@
                     <th>Показ пароля</th>
                     <th>Смена пароля рандомно</th>
                     <th>Длина смены пароля</th>
+                    <th>Удаление</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (Account account in accounts)
                 {
-                    <tr>                      
-                        <td>@account.Source</td>
+                    <tr>                       
+                        <td> 
+                            @account.Source
+                        </td>
                         <td>@account.Login</td>
                         @if (flag && accountId == account.Id)
                         {
-                            <td>@account.Password</td>
+                            @if (account.Password.Length > 16)
+                            {
+                                <td>@passwordEncryptor.Decrypt(account.Password);</td>
+                            }
+                            else
+                            {<td>@account.Password;</td>}
                         }
                         else
                         {
@@ -64,7 +76,9 @@
                                     <option> @i</option>
                                 }
                             </select>
-
+                        </td>
+                        <td>
+                            <Button Color="Color.Danger" class="btn btn-2" id="delete" @onclick="(()=>DeleteAccount(account))">Удалить</Button>
                         </td>
                     </tr>
                 }
@@ -93,9 +107,9 @@
                 </tr>
             </tbody>
         </table>
+        <br />     
         <br />
-        <button class="btn btn-primary" id="show" @onclick="AddAccount">Добавить новый аккаунт</button>
-        <div> @error </div>
+        <button class="btn btn-primary" id="add" @onclick="AddAccount">Добавить новый аккаунт</button>
     }
 }
 else
@@ -103,11 +117,10 @@ else
     <p><em>Loading...</em></p>
 }
 
-
-
 @code {
     private string _pageTitle = "Вы вошли под пользователем ";
     private int? _userId;
+    private int? _accountId;
     private string? _nameUser;
     private IEnumerable<Account> accounts = new List<Account>();
     private Account _newAccount = new();
@@ -116,9 +129,10 @@ else
     private string? xxx="*******";
     private int selectedNumber;
     private bool isConnected;
-    private string? error;
     private string? encryptedPassword;
     private string? decryptedPassword;
+    private bool checkedValue;
+    private List<Account>  arrAccountsDelete = new List<Account>();
     protected override async void OnInitialized()
     {
         accounts = await _listAccounts.GetAccounts();
@@ -127,20 +141,15 @@ else
     private void ShowPassword(Account account)
     {
         flag = !flag;
-        if (flag && account.Password.Length>16)
-            account.Password = passwordEncryptor.Decrypt(account.Password);
-        if (!flag)
-            account.Password = passwordEncryptor.Encrypt(account.Password);
         accountId = account.Id;
     }
     private async void Change(Account account, int selectedNumber)
     {
+        flag = false;
         Generate(account, selectedNumber);
+        ShowPassword(account);
         await _listAccounts.UpdateAccount(account);
-    }
-    private void SelectedNumber(ChangeEventArgs args)
-    {
-        selectedNumber =Convert.ToInt32(args?.Value);
+        toastService.ShowInfo("Сгенерирован новый пароль");
     }
     private async Task ReadLocalStorage()
     {
@@ -157,11 +166,10 @@ else
         }
     }
     private void Generate(Account _newAccount, int selectedNumber)
-    {
+    {        
         if (selectedNumber == 0)
             selectedNumber = 8;
-        _newAccount.Password = passwordEncryptor.Encrypt(GeneratePassword.Generate(selectedNumber));
-        error="Сгенерирован новый пароль"; 
+        _newAccount.Password = GeneratePassword.Generate(selectedNumber);
     }
     private async void AddAccount()
     {        
@@ -176,15 +184,26 @@ else
                 };
             await _listAccounts.AddAccount(_newAccount);
             _newAccount = new();
-            error = "Аккаунт успешно добавлен";
+            Thread.Sleep(2000); 
             navigationManager.NavigateTo("/PasswordManager", true);
         }
         else
-            error = "Не все поля заполнены корректно, также проверьте чтобы пароль содержал не менее 6 символов";
+            toastService.ShowError("Не все поля заполнены корректно, также проверьте чтобы пароль содержал не менее 6 символов");
+    }
+    private void DeleteAccount(Account account)
+    {
+        _listAccounts.Delete(account);       
+        navigationManager.NavigateTo("/PasswordManager", true);
     }
     private async void Exit()
     {
         navigationManager.NavigateTo("/Authorization");
         await localStorage.ClearAsync();
+        toastService.ShowInfo("Смена пользователя");
+    }
+    private void ChangePasswordUser(int _userId)
+    {
+        toastService.ShowInfo("Вы перенаправлены на страницу изменения пароля");
+        navigationManager.NavigateTo("/ChangePassword");
     }
 }
