--- a/CourceProject/Components/_Imports.razor
+++ b/CourceProject/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using CourceProject
 @using CourceProject.Components
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@using Blazored.Toast
+@using Blazored.Toast.Services
