--- a/CourceProject/Components/App.razor
+++ b/CourceProject/Components/App.razor
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="CourceProject.styles.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet  />
+    <link rel="icon" type="image/png" href="favicon.png" />    
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="_content/Blazored.Toast/blazored-toast.css" rel="stylesheet" />
+    <HeadOutlet @rendermode="InteractiveServer" />
 </head>
 
 <body>
-    <Routes  />
+    <Routes @rendermode="InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
 </body>
 
 </html>
+
