--- a/CourceProject/Components/Pages/Home.razor
+++ b/CourceProject/Components/Pages/Home.razor
@@ -1,7 +1,11 @@
-﻿@page "/"
+﻿
+@page "/"
 
 <PageTitle>Home</PageTitle>
 
 <h1>Вас приветствует начальная страница веб-приложения МЕНЕДЖЕР ПАРОЛЕЙ!</h1>
 
 Добро пожаловать в приложение
+<br />
+
+
