--- a/CourceProject/wwwroot/app.css
+++ b/CourceProject/wwwroot/app.css
@@ -12,6 +12,17 @@ a, .btn-link {
     border-color: #1861ac;
 }
 
+.btn-1 {
+    color: #191970;
+    background-color: #00FF00;
+    border-color: #00FF00;
+
+}
+.btn-2 {
+    color: #fff;
+    background-color: #FF4500;
+    border-color: #FF4500;
+}
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
