--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -7,6 +7,7 @@
 @inject NavigationManager navigationManager;
 @inject IEncryptor passwordEncryptor;
 @inject IToastService toastService
+@inject ILogger<PasswordManager> logger
 @page "/PasswordManager"
 
 @rendermode InteractiveServer
@@ -28,7 +29,7 @@
           
         </div>
         <br />
-        <button class="btn btn-primary" id="exit" @onclick="Exit">Выйти</button>
+        <button class="btn btn-3" id="exit" @onclick="Exit">Выйти</button>
         <br />
         <table class="table">
             <thead>
@@ -149,7 +150,8 @@ else
         Generate(account, selectedNumber);
         ShowPassword(account);
         await _listAccounts.UpdateAccount(account);
-        toastService.ShowInfo("Сгенерирован новый пароль");
+        logger.LogInformation("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
+        toastService.ShowInfo("Обновлены данные пароля аккаунта {" + account.Source + "} пользователя {" + _nameUser+"}");
     }
     private async Task ReadLocalStorage()
     {
@@ -183,8 +185,8 @@ else
                     UserId = _userId
                 };
             await _listAccounts.AddAccount(_newAccount);
+            logger.LogInformation("Добавлен новый аккаунт {" + _newAccount.Source+"}");
             _newAccount = new();
-            Thread.Sleep(2000); 
             navigationManager.NavigateTo("/PasswordManager", true);
         }
         else
@@ -192,17 +194,21 @@ else
     }
     private void DeleteAccount(Account account)
     {
-        _listAccounts.Delete(account);       
+        _listAccounts.Delete(account);      
+        logger.LogInformation("Удален аккаунт {" + account.Source+"}");
         navigationManager.NavigateTo("/PasswordManager", true);
     }
     private async void Exit()
     {
         navigationManager.NavigateTo("/Authorization");
+        logger.LogInformation("Выход пользователя {" + _nameUser + "} из приложения!");
         await localStorage.ClearAsync();
+        logger.LogInformation("Очистка sessionStorage!");
         toastService.ShowInfo("Смена пользователя");
     }
     private void ChangePasswordUser(int _userId)
     {
+        logger.LogInformation("Переход на страницу для смены пароля пользователя {" + _nameUser+"}");
         toastService.ShowInfo("Вы перенаправлены на страницу изменения пароля");
         navigationManager.NavigateTo("/ChangePassword");
     }
