--- a/CourceProject/Components/Pages/ChangePassword.razor
+++ b/CourceProject/Components/Pages/ChangePassword.razor
@@ -4,9 +4,10 @@
 @using Microsoft.AspNetCore.Components.Forms
 @inject IUserRepository _listUsers
 @inject Blazored.SessionStorage.ISessionStorageService localStorage;
-@inject NavigationManager navigationManager;
-@inject IEncryptor passwordEncryptor;
+@inject NavigationManager navigationManager
+@inject IEncryptor passwordEncryptor
 @inject IToastService toastService
+@inject ILogger<ChangePassword> logger
 
 @page "/ChangePassword"
 @rendermode InteractiveServer
@@ -61,6 +62,7 @@ else
             {
                 _user.Password = passwordEncryptor.Encrypt(changeUserPassword.NewPassword);
                 await _listUsers.UpdateUser(_user);
+                logger.LogInformation("Обновление пароля пользователя {" + changeUserPassword.NewPassword+"}");
                 toastService.ShowSuccess("Пароль успешно изменен"); 
                 navigationManager.NavigateTo("/PasswordManager");
             }
@@ -72,10 +74,9 @@ else
         else
         {
             toastService.ShowError("Текущий пароль неверен");
+            logger.LogWarning("Введен неверный пароль для пользователя {" + _user.Name+ "}");
             changeUserPassword = new();
         }
-
-       
     }
     protected async override Task OnAfterRenderAsync(bool firstRender)
     {
@@ -86,5 +87,4 @@ else
             StateHasChanged();
         }
     }
-   
 }
