--- a/CourceProject/wwwroot/app.css
+++ b/CourceProject/wwwroot/app.css
@@ -23,6 +23,12 @@ a, .btn-link {
     background-color: #FF4500;
     border-color: #FF4500;
 }
+.btn-3 {
+    color: #fff;
+    background-color: black;
+    border-color: black;
+}
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
