--- a/CourceProject/Components/Layout/NavMenu.razor
+++ b/CourceProject/Components/Layout/NavMenu.razor
@@ -11,27 +11,34 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Домашняя
+                <span class="bi bi-house-fill" style="font-size:1.5rem; display:flex; align-items:center; justify-content:center" aria-hidden="true"></span> Домашняя
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Authorization">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Авторизация
+                <span class="bi bi-person-fill-lock" style="font-size:1.5rem; display:flex; align-items:center; justify-content:center" aria-hidden="true"></span> Авторизация
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Registration">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Регистрация
+                <span class="bi bi-person-fill-add" style="font-size:1.5rem; display:flex; align-items:center; justify-content:center" aria-hidden="true"></span> Регистрация
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="PasswordManager">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Менеджер паролей
+                <span class="bi bi-person-lines-fill" style="font-size:1.5rem; display:flex; align-items:center; justify-content:center" aria-hidden="true"></span> Менеджер паролей
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="PasswordManager">
+                <span class="bi bi-people-fill" style="font-size:1.5rem; display:flex; align-items:center; justify-content:center" aria-hidden="true"></span> Доверенные лица
+            </NavLink>
+        </div>
+
 
     </nav>
 </div>
