--- a/CourceProject/Components/Pages/Home.razor
+++ b/CourceProject/Components/Pages/Home.razor
@@ -3,9 +3,18 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Вас приветствует начальная страница веб-приложения МЕНЕДЖЕР ПАРОЛЕЙ!</h1>
+<h1> Добро пожаловать в приложение "Менеджер паролей"! </h1>
 
-Добро пожаловать в приложение
+<br />
+<h5>Данное серверное приложение служит для хранения паролей от разных сервисов, аккаунтов.</h5>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
 <br />
 
 
