--- a/CourceProject/Components/Pages/ChangePassword.razor
+++ b/CourceProject/Components/Pages/ChangePassword.razor
@@ -19,7 +19,7 @@
     <EditForm Model="@changeUserPassword" OnValidSubmit="Change" FormName="user_changePassword">
     <DataAnnotationsValidator />
     <br />
-        Введите текущий пароль: <InputText type="password" @bind-Value="changeUserPassword.CurrentPassword" />
+        Введите текущий пароль: <InputText type="password" @bind-Value="changeUserPassword!.CurrentPassword" />
     <br />
     <br />
         Введите новый пароль: <InputText type="password" @bind-Value="changeUserPassword.NewPassword" />
@@ -44,23 +44,21 @@ else
     private string? error;
     private User? _user = new();
     private ChangeUserPassword? changeUserPassword = new();
-    private string? PasswordNew;
-    private string? PasswordRepeatNew;
     private bool isConnected;
 
     private async Task ReadLocalStorage()
     {
-        _user.Name = await localStorage.GetItemAsync<string>("userName");
+        _user!.Name = await localStorage.GetItemAsync<string>("userName");
         _user.Id = await localStorage.GetItemAsync<int>("userId");
     }
     private async void Change()
     {
-        _user = await _listUsers.GetUserById(_user.Id);
-        if (passwordEncryptor.Decrypt(_user.Password) == changeUserPassword.CurrentPassword)
+        _user = await _listUsers.GetUserById(_user!.Id);
+        if (passwordEncryptor.Decrypt(_user!.Password!) == changeUserPassword!.CurrentPassword)
         {
             if (changeUserPassword.NewPassword == changeUserPassword.NewPasswordRepeat)
             {
-                _user.Password = passwordEncryptor.Encrypt(changeUserPassword.NewPassword);
+                _user.Password = passwordEncryptor.Encrypt(changeUserPassword.NewPassword!);
                 await _listUsers.UpdateUser(_user);
                 logger.LogInformation("Обновление пароля пользователя {" + changeUserPassword.NewPassword+"}");
                 toastService.ShowSuccess("Пароль успешно изменен"); 
