--- a/CourceProject/Components/Pages/PasswordManager.razor
+++ b/CourceProject/Components/Pages/PasswordManager.razor
@@ -17,6 +17,7 @@
 {
     if (@_userId==0)
     {
+        toastService.ShowError("Пожалуйста авторизуйтесь!");
         navigationManager.NavigateTo("/Authorization");
     }
     else
@@ -25,7 +26,7 @@
         <p>userId - "@_userId" </p>
         <h1>Список аккаунтов</h1>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-2">
-            <button class="btn btn-1" @onclick="(()=>ChangePasswordUser((int)_userId))"> Изменить пароль пользователя </button>
+            <button class="btn btn-1" @onclick="(()=>ChangePasswordUser((int)_userId!))"> Изменить пароль пользователя </button>
           
         </div>
         <br />
@@ -53,7 +54,7 @@
                         <td>@account.Login</td>
                         @if (flag && accountId == account.Id)
                         {
-                            @if (account.Password.Length > 16)
+                            @if (account.Password!.Length > 16)
                             {
                                 <td>@passwordEncryptor.Decrypt(account.Password);</td>
                             }
