--- a/CourceProject/Components/Layout/NavMenu.razor
+++ b/CourceProject/Components/Layout/NavMenu.razor
@@ -34,7 +34,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="PasswordManager">
+            <NavLink class="nav-link" href="Confidant">
                 <span class="bi bi-people-fill" style="font-size:1.5rem; display:flex; align-items:center; justify-content:center" aria-hidden="true"></span> Доверенные лица
             </NavLink>
         </div>
